--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SugarLabs - Creative Design Agency</title>
+    <title>Shubham - Creative Developer</title>
     
     <meta name="description" content="Brand, Design, Product, In-House Development & More - Creative digital agency specializing in UI/UX, marketing, motion, animation and branding." />
     <meta name="author" content="Shubham" />
